--- a/CET322_HW2/Views/Students/Detail.cshtml
+++ b/CET322_HW2/Views/Students/Detail.cshtml
@@ -9,7 +9,7 @@
 		<div class="row align-items-center">
 			<div class="col-xl-4 col-lg-6 col-md-12 col-sm-12">
 				<div class="post-media wow fadeIn">
-					<img src="~/images/team-01.png" alt="" style="height:450px;width:300px" class="img-fluid img-rounded">
+					<img src="~/uploads/@Model.ImageUrl" alt="" style="height:450px;width:300px" class="img-fluid img-rounded">
 				</div><!-- end media -->
 			</div><!-- end col -->
 
@@ -50,10 +50,27 @@
 					</dl>
 					<dl class="row">
 						<dt class="col-sm-2">
-							@Html.DisplayNameFor(model => model.Department.Name)
+							@Html.DisplayNameFor(model => model.DepartmentName)
 						</dt>
 						<dd class="col-sm-10">
 							@Html.DisplayFor(model => model.Department.Name)
+						</dd>
+					</dl>
+					<dl class="row">
+						<dt class="col-sm-2">
+							@Html.DisplayNameFor(model => model.CreatedDate)
+						</dt>
+						<dd class="col-sm-10">
+							@Html.DisplayFor(model => model.CreatedDate)
+						</dd>
+					</dl>
+					<dl class="row">
+						<dt class="col-sm-2">
+							@Html.DisplayNameFor(model => model.PersonalInfo)
+						</dt>
+						<dd class="col-sm-10">
+							@Html.Raw(Model.PersonalInfo.Replace(System.Environment.NewLine, "<br />"))
+							
 						</dd>
 					</dl>
 					<a asp-action="StudentList" class="hover-btn-new orange"><span>Back To The List</span></a>
