--- a/CET322_HW2/Views/Students/StudentList.cshtml
+++ b/CET322_HW2/Views/Students/StudentList.cshtml
@@ -26,7 +26,7 @@
 				<div class="col-lg-3 col-md-6 col-12">
 					<div class="our-team">
 						<div class="team-img">
-							<img src="~/images/team-01.png">
+							<img src="~/uploads/@student.ImageUrl">
 							<div class="social">
 								<ul>
 									<li>
